MPS-19798 add -ea flag to run test configurations by default